feat(final): complete mtadgital project
